# spotify-control

./: Cargo.toml
.github/workflows/: rust-ci.yml
src/: commands.rs  error.rs  lib.rs  main.rs  metadata.rs  notification.rs  player.rs  spotify_api.rs
tests/: tests.rs
