[package]
name = "spotify-control"
version = "1.1.0"
edition = "2021"
description = "Control Spotify from the command line"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
notify-rust = "4.5.8"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
temp-file = "0.1.7"
tokio = { version = "1.19.2", features = ["full"] }
zbus = { version = "2.3.2", default-features = false, features = ["tokio"] }
mockall = "0.11.3"
async-trait = "0.1.58"

[[test]]
name = "player_tests"
path = "tests/tests.rs"

